--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build && scp -r ./build/* ilya@51.250.108.206:/home/ilya/mesto-frontend",
+    "predeploy": "npm run build && scp -r ./build/* ilya120@46.138.253.44:/var/www/html2/react-mesto-auth/build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
